code/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T200000+0000/task_id=Insert/attempt=2.log
[2024-01-05T20:01:32.757+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:32.758+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:32.789+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:32.790+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:32.831+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [queued]>
[2024-01-05T20:01:32.841+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [queued]>
[2024-01-05T20:01:32.841+0000] {taskinstance.py:2171} INFO - Starting attempt 2 of 2
[2024-01-05T20:01:32.858+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): Insert> on 2024-01-05 20:00:00+00:00
[2024-01-05T20:01:32.862+0000] {standard_task_runner.py:60} INFO - Started process 295 to run task
[2024-01-05T20:01:32.866+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'User_counter', 'Insert', 'scheduled__2024-01-05T20:00:00+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/User_counter.py', '--cfg-path', '/tmp/tmpurnvqgru']
[2024-01-05T20:01:32.869+0000] {standard_task_runner.py:88} INFO - Job 5: Subtask Insert
[2024-01-05T20:01:32.939+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509
[2024-01-05T20:01:32.939+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T20:00:00+00:00/task_id=Insert'
[2024-01-05T20:01:32.941+0000] {task_command.py:423} INFO - Running <TaskInstance: User_counter.Insert scheduled__2024-01-05T20:00:00+00:00 [running]> on host 732ac0f11a3e
[2024-01-05T20:01:33.064+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Airflow' AIRFLOW_CTX_DAG_ID='User_counter' AIRFLOW_CTX_TASK_ID='Insert' AIRFLOW_CTX_EXECUTION_DATE='2024-01-05T20:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-05T20:00:00+00:00'
[2024-01-05T20:01:33.065+0000] {sql.py:276} INFO - Executing: INSERT INTO users_count (count, date) 
        VALUES ((select count(id) from users) , '%(date)s' );
[2024-01-05T20:01:33.075+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T20:01:33.090+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T20:01:33.095+0000] {sql.py:432} INFO - Running statement: INSERT INTO users_count (count, date) 
        VALUES ((select count(id) from users) , '%(date)s' );, parameters: {'date': '2024-01-05 20:01:32'}
[2024-01-05T20:01:33.096+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "2024"
LINE 2:         VALUES ((select count(id) from users) , ''2024-01-05...
                                                          ^

[2024-01-05T20:01:33.110+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=User_counter, task_id=Insert, execution_date=20240105T200000, start_date=20240105T200132, end_date=20240105T200133
[2024-01-05T20:01:33.127+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 5 for task Insert (syntax error at or near "2024"
LINE 2:         VALUES ((select count(id) from users) , ''2024-01-05...
                                                          ^
; 295)
[2024-01-05T20:01:33.158+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-05T20:01:33.179+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
